# SistemasOperativos

./: CMakeLists.txt  Makefile  README.md  autores.c  definicionsBase.h  entradas.c  entradas.h  ficheiros.c  ficheiros.h  funcionsTemporais.c  funcionsTemporais.h  help.c  help.h  historial.c  historial.h  main.c  procesos.c  procesos.h
P1/: CMakeLists.txt  autores.h  ficheiros.c  ficheiros.h  help.c  historial.c  historial.h  p1.c
P2/: CMakeLists.txt  Makefile  README.md  entradas.c  entradas.h  ficheiros.c  ficheiros.h  help.c  help.h  historial.c  memoria.c  memoria.h  p2.c  p3.c  procesos.c  procesos.h
